[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mononoki.tres" type="DynamicFont" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
margin_top = 10.0
margin_right = 800.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
text = "Memory Match"
align = 1

[node name="RevealTimer" type="Timer" parent="."]

[node name="MissCounter" type="Label" parent="."]
margin_top = 380.0
margin_right = 800.0
margin_bottom = 450.0
custom_fonts/font = ExtResource( 2 )
text = "Misses:
0"
align = 1

[node name="VictoryLabel" type="Label" parent="."]
margin_right = 800.0
margin_bottom = 450.0
custom_fonts/font = ExtResource( 2 )
text = "You Win!"
align = 1
valign = 1

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="timeout" from="RevealTimer" to="." method="_on_RevealTimer_timeout"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_RestartTimer_timeout"]
